--- a/ChurchMemberProfile.Web/ChurchMemberProfile.Web/index.html
+++ b/ChurchMemberProfile.Web/ChurchMemberProfile.Web/index.html
@@ -1,9 +1,38 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html ng-app="vpApp">
 <head>
-    <title></title>
+    <link rel="Stylesheet" type="text/css" href="Content/styles.css" />
+    <link href="Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link rel="SHORTCUT ICON" href="favicon.ico" type="image/ico" />
+    <title>
+        SA Web Reports
+    </title>
+    <script src="Scripts/jquery-1.9.1.min.js" type="text/javascript"></script>
+    <script src="Scripts/bootstrap.min.js" type="text/javascript"></script>
+    <script src="Scripts/angular.min.js"></script>
+    <script src="Scripts/angular-route.min.js"></script>
+    <script src="Scripts/angular-resource.min.js"></script>
+    <script src="Scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>
+    <script src="Scripts/angular-sanitize.min.js"></script>
+    <script src="services/saResourceService.js"></script>
+    <script src="app/indexApp.js"></script>
+
+    <script src="ctrls/index.js"></script>
+
+    <base href="/">
 </head>
 <body>
-    <h1>The index page</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>This is the index page</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div ng-view></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
