--- a/ChurchMemberProfile.Web/ChurchMemberProfile.Web/html/indexContent.html
+++ b/ChurchMemberProfile.Web/ChurchMemberProfile.Web/html/indexContent.html
@@ -1,1 +1,49 @@
-﻿<h3>content</h3>
+﻿<h3>Add Member</h3>
+<div class="row">
+    <div class="col-md-4">
+        <label>Lastname</label>
+        <input type="text" class="form-control input-md" />
+    </div>
+    <div class="col-md-4">
+        <label>Firstname</label>
+        <input type="text" class="form-control input-md" />
+    </div>
+    <div class="col-md-4">
+        <label>Middle</label>
+        <input type="text" class="form-control input-md" />
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-4">
+        <label>Nickname</label>
+        <input type="text" class="form-control input-md" />
+    </div>
+    <div class="col-md-4">
+        <label>Birthdate</label>
+        <input type="text" class="form-control input-md" />
+    </div>
+    <div class="col-md-4">
+        &nbsp;
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <label>Address</label>
+        <input type="text" class="form-control input-md" />
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-4">
+        <label>Victory Group Leader</label>
+        <select class="form-control input-md">
+            <option>--SELECT--</option>
+            <option>Ralph Dellosa</option>
+            <option>Chris Manuel</option>
+            <option>John Doe</option>
+            <option>Ed Lapiz</option>
+        </select>
+    </div>
+    <div class="col-md-8">
+        &nbsp;
+    </div>
+</div>
