--- a/ChurchMemberProfile.Web/ChurchMemberProfile.Web/index.html
+++ b/ChurchMemberProfile.Web/ChurchMemberProfile.Web/index.html
@@ -17,15 +17,20 @@
     <script src="services/saResourceService.js"></script>
     <script src="app/indexApp.js"></script>
 
+    <script src="ctrls/template.js"></script>
     <script src="ctrls/index.js"></script>
-
     <base href="/">
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <h1>This is the index page</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div ng-include src="'shared/nav/nav.html'"></div>
             </div>
         </div>
         <div class="row">
