--- a/ChurchMemberProfile.Web/ChurchMemberProfile.Web/html/createTemplate.html
+++ b/ChurchMemberProfile.Web/ChurchMemberProfile.Web/html/createTemplate.html
@@ -1,34 +1,35 @@
 ﻿<div class="row">
     <div class="col-md-4">
-        <input type="button" class="btn btn-md btn-primary"  value="Add Property"/>
+        <input type="button" class="btn btn-md btn-primary" value="Add Property" ng-click="openModal()" />
     </div>
     <div class="col-md-8">
         &nbsp;
     </div>
 </div>
 
-<div ng-controller="ModalDemoCtrl">
-    <script type="text/ng-template" id="myModalContent.html">
-        <div class="modal-header">
-            <h3 class="modal-title">I'm a modal!</h3>
-        </div>
-        <div class="modal-body">
-            <ul>
-                <li ng-repeat="item in items">
-                    <a href="#" ng-click="$event.preventDefault(); selected.item = item">{{ item }}</a>
-                </li>
-            </ul>
-            Selected: <b>{{ selected.item }}</b>
-        </div>
-        <div class="modal-footer">
-            <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
-            <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
-        </div>
-    </script>
 
-    <button type="button" class="btn btn-default" ng-click="open()">Open me!</button>
-    <button type="button" class="btn btn-default" ng-click="open('lg')">Large modal</button>
-    <button type="button" class="btn btn-default" ng-click="open('sm')">Small modal</button>
-    <button type="button" class="btn btn-default" ng-click="toggleAnimation()">Toggle Animation ({{ animationsEnabled }})</button>
-    <div ng-show="selected">Selection from a modal: {{ selected }}</div>
-</div>
+<script type="text/ng-template" id="createTemplateModal.html">
+    <div class="modal-header">
+        <h3 class="modal-title">I'm a modal!</h3>
+    </div>
+    <div class="modal-body">
+        <div class="row">
+            <div class="col-md-6">
+                <label>Name</label>
+                <input type="text" class="form-control input-md" /> 
+            </div>
+            <div class="col-md-6">
+                <label>Type</label>
+                <select class="form-control" input-md>
+                    <option>--SELECT--</option>
+                    <option>Text</option>
+                    <option>Boolean</option>
+                </select>
+            </div>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+        <button class="btn btn-default" type="button" ng-click="cancel()">Cancel</button>
+    </div>
+</script>
