--- a/ChurchMemberProfile.Web/ChurchMemberProfile.Web/html/createTemplate.html
+++ b/ChurchMemberProfile.Web/ChurchMemberProfile.Web/html/createTemplate.html
@@ -1,4 +1,23 @@
 ﻿<div class="row">
+    <div class="col-md-6">
+        <label>Template Name</label>
+        <input type="text" class="form-control input-md" />
+    </div>
+    <div class="col-md-6">
+        &nbsp;
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-6">
+        <label>Description</label>
+        <input type="text" class="form-control input-md" />
+    </div>
+    <div class="col-md-6">
+        &nbsp;
+    </div>
+</div>
+<br />
+<div class="row">
     <div class="col-md-4">
         <input type="button" class="btn btn-md btn-primary" value="Add Property" ng-click="openModal()" />
     </div>
