--- a/ChurchMemberProfile.Web/ChurchMemberProfile.Web/shared/nav/nav.html
+++ b/ChurchMemberProfile.Web/ChurchMemberProfile.Web/shared/nav/nav.html
@@ -15,7 +15,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="#/index">Add Member <span class="sr-only">(current)</span></a></li>
-                <li><a href="#/template">Profile</a></li>
+                <li><a href="#/template">Template</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
