--- a/ChurchMemberProfile.Web/ChurchMemberProfile.Web/html/indexContent.html
+++ b/ChurchMemberProfile.Web/ChurchMemberProfile.Web/html/indexContent.html
@@ -2,25 +2,25 @@
 <div class="row">
     <div class="col-md-4">
         <label>Lastname</label>
-        <input type="text" class="form-control input-md" />
+        <input type="text" class="form-control input-md" ng-model="member.lastname" />
     </div>
     <div class="col-md-4">
         <label>Firstname</label>
-        <input type="text" class="form-control input-md" />
+        <input type="text" class="form-control input-md" ng-model="member.firstname" />
     </div>
     <div class="col-md-4">
         <label>Middle</label>
-        <input type="text" class="form-control input-md" />
+        <input type="text" class="form-control input-md" ng-model="member.mi" />
     </div>
 </div>
 <div class="row">
     <div class="col-md-4">
         <label>Nickname</label>
-        <input type="text" class="form-control input-md" />
+        <input type="text" class="form-control input-md" ng-model="member.nickname" />
     </div>
     <div class="col-md-4">
         <label>Birthdate</label>
-        <input type="text" class="form-control input-md" />
+        <input type="text" class="form-control input-md" ng-model="member.birthdate" />
     </div>
     <div class="col-md-4">
         &nbsp;
@@ -29,13 +29,13 @@
 <div class="row">
     <div class="col-md-12">
         <label>Address</label>
-        <input type="text" class="form-control input-md" />
+        <input type="text" class="form-control input-md" ng-model="member.address" />
     </div>
 </div>
 <div class="row">
     <div class="col-md-4">
         <label>Victory Group Leader</label>
-        <select class="form-control input-md">
+        <select class="form-control input-md" ng-model="member.leaderid">
             <option>--SELECT--</option>
             <option>Ralph Dellosa</option>
             <option>Chris Manuel</option>
